tests/reference/asr-mask_not_logical-1c7b2a8.stderr
semantic error: 'mask' argument of 'sum' intrinsic must be logical
 --> tests/errors/mask_not_logical.f90:2:14
  |
2 |     print *, sum([1, 2, 3], mask = [1, 2, 3])
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
